--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "eslint": "^7.29.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "terser-brunch": "^4.0.0"
   }
 }
