--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux": "^4.1.0",
+    "sass": "^1.35.1",
     "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
   },
